--- a/ALTC-Site/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/ALTC-Site/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -235,8 +235,8 @@
     <!-- jQuery -->
     <script src="~/Admin/plugins/jquery/jquery.min.js"></script>
     <!-- jQuery UI 1.11.4 -->
-    <script src="~/Admin/plugins/jquery-ui/jquery-ui.min.js"></script>
-    <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
+@*     <script src="~/Admin/plugins/jquery-ui/jquery-ui.min.js"></script>
+ *@    <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
     <script>
         $.widget.bridge('uibutton', $.ui.button)
     </script>
