--- a/ALTC-Site/Views/Request/Create.cshtml
+++ b/ALTC-Site/Views/Request/Create.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Create";
     var lang = ViewBag.lang;
+    var dir = ViewBag.dir;
 }
 
 <style>
@@ -12,7 +13,7 @@
         display: none;
       }
 
-      #file-input-label {
+      .file-input-label {
         font-size: 1em;
         padding: 7px 15px;
         margin-botton:10px;
@@ -29,7 +30,7 @@
             <div class="row">
                 <div class="col-12 col-md-6">
                     <label style=" display: flex !important ; justify-content: end;" dir="rtl asp-for="Name" class="control-label">الاسم</label>
-                    <input asp-for="Name" class="form-control" />
+                    <input asp-for="Name" class="form-control"  required />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="col-12 col-md-6">
@@ -39,24 +40,24 @@
                 </div>
             </div>
         </div>
+        <input type="hidden" name="lang" value="@ViewData["lang"]" />
+        <input type="hidden" name="dir" value="@ViewData["dir"]" />
 
         <div class="form-group">
             <label style=" display: flex !important ; justify-content: end;;" dir="rtl asp-for="Email" class="control-label">البريد الالكتروني</label>
-            <input asp-for="Email" class="form-control" />
+            <input asp-for="Email" class="form-control" required />
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label id="file-input-label" style=" display: flex !important ; justify-content: end;" asp-for="File" class="control-label">اختار الملف</label>
-            <label id="file-input-label" for="File" class="text-right" dir="rtl">تحميل </label>
-
-            
-            <input style="display:none"  name="اختار الملف" palceholder="اختار الملف" dir="rtl" asp-for="File" class="form-control" />
+            <label  style=" display: flex !important ; justify-content: end;">اختار الملف</label>
+            <label asp-for="File" class="text-right file-input-label" dir="rtl">تحميل </label>
+            <input style="visibility:hidden" palceholder="اختار الملف" dir="rtl" asp-for="File" class="form-control" required />
 
             <span  dir="rtl" asp-validation-for="File" class="text-danger"></span>
         </div>
         <div style="margin-top:10px;" class="form-group">
             <label  dir="rtl" style=" display: flex !important : justify-content: end;;" asp-for="Details" class="control-label">اترك رسالتك</label>
-            <textarea asp-for="Details" style="outline: none !important;border-color: none !important;" class="form-control" rows="4"></textarea>
+            <textarea asp-for="Details" style="outline: none !important;border-color: none !important;" class="form-control" rows="4" pattern="[\u0600-\u06FF\s]+([\u0600-\u06FF\s]+){1,}"></textarea>
         </div>
 
         <button id="margin" type="submit" class="btn btn-primary">إرسال</button>
@@ -70,7 +71,7 @@ else
             <div class="row">
                 <div class="col-12 col-md-6">
                     <label asp-for="Name" class="control-label"></label>
-                    <input asp-for="Name" class="form-control" required />
+                    <input asp-for="Name" class="form-control"  />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="col-12 col-md-6">
@@ -80,10 +81,12 @@ else
                 </div>
             </div>
         </div>
+        <input type="hidden" name="lang" value="@ViewData["lang"]" />
+        <input type="hidden" name="dir" value="@ViewData["dir"]" />
 
         <div class="form-group">
             <label asp-for="Email" class="control-label"></label>
-            <input asp-for="Email" class="form-control" required />
+            <input asp-for="Email" class="form-control"/>
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
         <div class="form-group">
@@ -103,7 +106,12 @@ else
 
 
 
-@* <partial name="_ValidationScriptsPartial" /> *@
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 }
+@* <partial name="_ValidationScriptsPartial" />
+ *@@* @section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+} *@
