--- a/ALTC-Site/Views/Shared/_LayoutLtr.cshtml
+++ b/ALTC-Site/Views/Shared/_LayoutLtr.cshtml
@@ -262,11 +262,11 @@
 
     <!-- Template Main JS File -->
     <script src="~/assets/js/main.js"></script>
-    <script type="text/javascript" src="~/js/jquery.events.touch.js"></script>
-    <script type="text/javascript" src="~/owl-carousel/owl.carousel.js"></script>
+@*     <script type="text/javascript" src="~/js/jquery.events.touch.js"></script>
+ *@    <script type="text/javascript" src="~/owl-carousel/owl.carousel.js"></script>
     <script type="text/javascript" src="~/js/template-scripts.js"></script>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+@*     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+ *@    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="https://kit.fontawesome.com/1c2c2462bf.js" crossorigin="anonymous"></script>
     @await RenderSectionAsync("Scripts", required: false)
