--- a/ALTC-Site/Areas/Admin/Views/Team/Create.cshtml
+++ b/ALTC-Site/Areas/Admin/Views/Team/Create.cshtml
@@ -16,12 +16,12 @@
         <div class="row mx-0">
             <div style="margin: auto!important; width: 100%!important; " class="">
 
-                <form asp-action="Create" enctype="multipart/form-data">
+                <form asp-action="Create" asp-controller="Team"  asp-area="Admin" enctype="multipart/form-data">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group">
                         <label asp-for="Language" class="control-label"></label>
 
-                        <select asp-for="Language" asp-items="languages"></select>
+                        <select asp-for="Language" asp-items="languages" class="form-control"></select>
                     </div>
                     <div class="form-group">
                         <label asp-for="Name" class="control-label"></label>
@@ -70,9 +70,9 @@
         </div>
     </div>
 </div>
-@section Scripts {
+@* @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-}
+} *@
 
