--- a/ALTC-Site/Areas/Admin/Views/Team/Edit.cshtml
+++ b/ALTC-Site/Areas/Admin/Views/Team/Edit.cshtml
@@ -17,7 +17,10 @@
                     <div class="form-group text-center">
                         <img id="ProfilePicturePreview"  class="border-info rounded-circle" style="max-width: 150px" />
                     </div>
-              
+                    <div class="form-group">
+                        <input type="hidden" asp-for="Language" />
+
+                    </div>
                     <div class="form-group">
                         <label asp-for="Name" class="control-label"></label>
                         <input asp-for="Name" class="form-control" />
