--- a/ALTC-Site/Views/Contact/Index.cshtml
+++ b/ALTC-Site/Views/Contact/Index.cshtml
@@ -519,10 +519,11 @@ else
 <script>
 	function GetRequestForm() {
 		let lang = '@lang';
+		let dir = '@dir';
 		$.ajax(
 			{
 				url: "/Request/Create/",
-				data: { lang: lang },
+				data: { lang: lang ,dir:dir},
 				success: function (result) {
 				
 					document.getElementById("form1").innerHTML = result;
