--- a/ALTC-Site/Views/JobCandidate/Index.cshtml
+++ b/ALTC-Site/Views/JobCandidate/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Index";
+    Layout = "_LayoutLtr";
+
 }
 <div style="margin-top:100px"></div>
 
@@ -17,3 +19,10 @@
     </div>
 </section><!-- End Team Section -->
 <div style="margin-top:100px"></div>
+<script>
+    // Delay for 3 seconds (adjust as needed)
+    setTimeout(function () {
+        // Redirect to another page after the delay
+        window.location.href = '/Contact/Index/ltr/en';
+    }, 3000);
+</script>
