--- a/ALTC-Site/Views/Complain/Index.cshtml
+++ b/ALTC-Site/Views/Complain/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Index";
+    Layout = "_LayoutLtr";
+
 }
 <div style="margin-top:100px"></div>
 
@@ -9,7 +11,6 @@
         <div class="section-title">
             <h3>Data  <span> Saved We Will contact With u Soon</span></h3>
             <br />
-
             <h1> Arab Leading Technology <span> ALTC</span></h1>
             <p></p>
         </div>
@@ -18,3 +19,10 @@
     </div>
 </section><!-- End Team Section -->
 <div style="margin-top:100px"></div>
+<script>
+    // Delay for 3 seconds (adjust as needed)
+    setTimeout(function () {
+        // Redirect to another page after the delay
+        window.location.href = '/Contact/Index/ltr/en';
+    }, 3000);
+</script>
