--- a/ALTC-Site/Views/TechnicalSupport/Index.cshtml
+++ b/ALTC-Site/Views/TechnicalSupport/Index.cshtml
@@ -1,6 +1,8 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Index";
+  
+    Layout = "_LayoutLtr";
+
 }
 <div style="margin-top:100px"></div>
 
@@ -8,9 +10,8 @@
     <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-            <h3>Data  <span> Saved We Will contact With You Soon</span></h3>
+            <h3>Data  <span> Saved We Will contact With u Soon</span></h3>
             <br />
-
             <h1> Arab Leading Technology <span> ALTC</span></h1>
             <p></p>
         </div>
@@ -19,3 +20,10 @@
     </div>
 </section><!-- End Team Section -->
 <div style="margin-top:100px"></div>
+<script>
+    // Delay for 3 seconds (adjust as needed)
+    setTimeout(function () {
+        // Redirect to another page after the delay
+        window.location.href = '/Contact/Index/ltr/en';
+    }, 3000);
+</script>
